feature:update project jdk to 1.8 fix:fix the URLEncoder parameter